--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: "Merriweather", serif;
+  font-family: "Maven Pro", sans-serif;
   font-size: 1rem;
   font-weight: 400;
 }
@@ -28,7 +28,7 @@ a {
 
 input,
 button {
-  font-family: "Merriweather", serif;
+  font-family: "Maven Pro", sans-serif;
   font-size: 1rem;
 }
 
@@ -44,3 +44,58 @@ button {
   justify-content: center;
 }
 
+/* =-= Start Hero Section =-= */
+.hero {
+  width: 100%;
+  padding: 50px 0 0;
+  background-color: rgba(229, 84, 115, 0.1);
+}
+
+.hero__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hero__text-wrap {
+  width: 100%;
+  max-width: 725px;
+  flex-grow: 1;
+}
+
+.hero__thumb-wrap {
+  width: 100%;
+  max-width: 635px;
+  flex-grow: 1;
+  margin-left: 40px;
+}
+
+.hero__title {
+  font-size: 80px;
+  font-weight: 700;
+  color: #272727;
+}
+
+.hero__text {
+  font-size: 18px;
+  font-weight: 400;
+  color: rgba(39, 39, 39, 0.6);
+  line-height: 30px;
+  margin-top: 17px;
+  max-width: 634px;
+}
+
+.hero__btn-wrap {
+  margin-top: 32px;
+}
+
+.hero__btn {
+  padding: 20px 43px;
+  border: none;
+  border-radius: 8px;
+  background: #e55473;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  cursor: pointer;
+}
