--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,3 +99,75 @@ button {
   font-weight: 700;
   cursor: pointer;
 }
+
+/* =-= Feature Section Start =-= */
+.feature {
+  padding: 178px 0 128px;
+}
+
+.feature__head {
+  width: 100%;
+  max-width: 530px;
+  margin: auto;
+  text-align: center;
+}
+
+.feature__title {
+  color: #272727;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 22px;
+}
+
+.feature__text {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.feature__flowers {
+  margin-top: 48px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(464px, 1fr));
+  gap: 24px;
+}
+
+.flower__item-body {
+  height: 538px;
+  background-color: red;
+  border-radius: 300px 300px 0 0;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.light--pink {
+  background: rgba(167, 33, 98, 0.15);
+}
+.light--cyan {
+  background: rgba(5, 151, 160, 0.15);;
+}
+.light--green {
+  background: rgba(71, 125, 17, 0.15);
+}
+
+.light--cyan > img {
+  margin-bottom: 51px;
+}
+
+.flower__item-footer {
+  margin-top: 32px;
+}
+
+.flower__item-text {
+  display: block;
+  text-align: center;
+  color: #272727;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 35px;
+  text-decoration: underline;
+}
