--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,14 +105,16 @@ button {
   padding: 178px 0 128px;
 }
 
-.feature__head {
+.feature__head,
+.instagram__head {
   width: 100%;
   max-width: 530px;
   margin: auto;
   text-align: center;
 }
 
-.feature__title {
+.feature__title,
+.instagram__title {
   color: #272727;
   text-align: center;
   font-size: 40px;
@@ -120,7 +122,8 @@ button {
   margin-bottom: 22px;
 }
 
-.feature__text {
+.feature__text,
+.instagram__text {
   color: rgba(39, 39, 39, 0.6);
   font-size: 18px;
   font-weight: 400;
@@ -250,4 +253,29 @@ button {
   font-weight: 400;
   line-height: 30px;
   margin: 22px 0 32px;
+}
+
+/* =-= Start Instagram Section =-= */
+.instagram {
+  width: 100%;
+  padding: 128px 0;
+}
+
+.instagram__categories {
+  margin-top: 48px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(342px, 1fr));
+  gap: 30px 24px;
+}
+
+.category__item {
+  width: 100%;
+  height: 396px;
+  overflow: hidden;
+}
+
+.category__item-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
