--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,8 @@ button {
 }
 
 .feature__head,
-.instagram__head {
+.instagram__head,
+.contact__head{
   width: 100%;
   max-width: 530px;
   margin: auto;
@@ -114,7 +115,8 @@ button {
 }
 
 .feature__title,
-.instagram__title {
+.instagram__title,
+.contact__title {
   color: #272727;
   text-align: center;
   font-size: 40px;
@@ -123,7 +125,8 @@ button {
 }
 
 .feature__text,
-.instagram__text {
+.instagram__text,
+.contact__text {
   color: rgba(39, 39, 39, 0.6);
   font-size: 18px;
   font-weight: 400;
@@ -327,4 +330,66 @@ button {
   outline: none;
   background-color: #fff;
   height: 64px;
+}
+
+/* =-= Start Contact Section =-= */
+.contact {
+  width: 100%;
+  padding: 0 0 128px;
+}
+
+.contact__content {
+  padding: 0 150px;
+}
+
+.contact__info {
+  margin-top: 48px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact__thumb-wrap {
+  width: 100%;
+  max-width: 318px;
+  flex-grow: 1;
+}
+
+.contact__thum {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+}
+
+.contact__form-wrap {
+  width: 100%;
+  max-width: 617px;
+  flex-grow: 1;
+  margin-left: 40px;
+}
+
+.contact__form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__group {
+  width: 100%;
+  margin-bottom: 24px;
+}
+
+.form__input, .form__textarea {
+  width: 100%;
+  height: 56px;
+  padding: 0 22px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+}
+
+.form__textarea {
+  height: 300px;
+  font-family: "Maven Pro", sans-serif;
+  font-size: 16px;
+  padding: 22px;
 }
