--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ button {
 
 .feature__head,
 .instagram__head,
-.contact__head{
+.contact__head {
   width: 100%;
   max-width: 530px;
   margin: auto;
@@ -378,7 +378,8 @@ button {
   margin-bottom: 24px;
 }
 
-.form__input, .form__textarea {
+.form__input,
+.form__textarea {
   width: 100%;
   height: 56px;
   padding: 0 22px;
@@ -392,4 +393,39 @@ button {
   font-family: "Maven Pro", sans-serif;
   font-size: 16px;
   padding: 22px;
+}
+
+/* =-= Footer Section Start =-= */
+.footer {
+  width: 100%;
+  padding: 128px 0;
+  background-color: #111010;
+}
+
+.footer__content {
+  max-width: 625px;
+  width: 100%;
+  text-align: center;
+  margin: auto;
+}
+
+.footer__title {
+  font-size: 48px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.footer__text {
+  display: block;
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
+  margin: 22px 0 32px;
+}
+
+.footer__copyright {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 16px;
+  font-weight: 400;
 }
